--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,12 @@ nav > a:link {
 	color: #fff;
 	text-decoration: none;
 }
+main {
+	font-size: 2.4rem;
+	margin-right: 20%;
+	margin-top: 2%;
+	margin-left: 20%;
+	padding: 5rem;
+	border-radius: 2%;
+	background-color: #fff;
+}
