--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ nav {
 	align-items: center;
 	padding: 1rem;
 	color: #fff;
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-weight: 700;
 	background-color: #0c0d3d;
 	padding-left: 20%;
@@ -31,11 +31,13 @@ nav > a:link {
 	text-decoration: none;
 }
 main {
-	font-size: 2.4rem;
+	font-size: 2.2rem;
 	margin-right: 20%;
 	margin-top: 2%;
 	margin-left: 20%;
 	padding: 5rem;
-	border-radius: 2%;
+	border-radius: 1%;
+	border: 5px solid #c4c4c4;
+
 	background-color: #fff;
 }
