--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,12 @@ header {
 		rgba(12, 22, 60, 1) 100%
 	);
 	padding: 2rem;
-	height: 12rem;
+	height: 6rem;
 }
 header > img {
 	width: 11%;
 	/* height: 100%; */
+	margin-top: -2em;
 	margin-right: 2rem;
 }
 nav {
@@ -43,4 +44,8 @@ main {
 }
 .question ul{
 	list-style-type: none;
+}
+label{
+	font-size: 1em;
+	color: #000;
 }
