--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 html {
 	font-size: 10px;
-	font-family: sans-serif;
+	font-family: roboto, Arial, Helvetica, sans-serif;
 	padding: 0;
 }
 body {
