--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ header {
 	height: 12rem;
 }
 header > img {
-	width: 11%;
+	height: 100%;
 	/* height: 100%; */
 	margin-right: 2rem;
 }
@@ -41,6 +41,35 @@ main {
 
 	background-color: #fff;
 }
-.question ul{
+.question ul {
 	list-style-type: none;
+}
+@media (max-width: 768px) {
+	header {
+		height: 10rem;
+		display: flex;
+		justify-content: center;
+	}
+	header > img {
+		width: 50%;
+	}
+	nav {
+		padding-left: 10%;
+		padding-right: 10%;
+		flex-wrap: wrap;
+		gap: 1rem;
+	}
+	nav > a {
+		width: 100%;
+	}
+	main {
+		margin-right: 10%;
+		margin-left: 10%;
+	}
+	section > ul {
+		padding: 0;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
 }
