--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,10 @@ main {
 	border: 5px solid #c4c4c4;
 	background-color: #fff;
 }
-
+main img {
+	width: 100%;
+	height: auto;
+}
 .question-header {
 	font-size: 2.5rem;
 	font-weight: 700;
